<resources>
	<string name="app_name">Todo App</string>
	<string name="todo">TODO</string>
	<string name="full_name">Full Name</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<string name="title_activity_dashboard">DashboardActivity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>