<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".RegisterActivity"
		android:orientation="vertical"
		android:padding="30dp">

		<ImageView
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:src="@drawable/todo"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="50dp"
				android:contentDescription="@string/todo"/>

		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/nameTxt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/full_name"
				android:layout_marginBottom="10dp">

			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
			/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/emailTxt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/email">

			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
			/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/passwdTxt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:layout_marginTop="10dp">

			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
			/>

		</com.google.android.material.textfield.TextInputLayout>

		<Button
				android:id="@+id/registerBtn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/register"
				style="@style/Widget.MaterialComponents.Button"
				android:layout_marginTop="10dp"
		/>
</LinearLayout>